added meilleures ventes

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body>
     <header>
         <!-- Nav menu -->
-        <section>
+        <section class="logo-container">
             <img class="logo" src="/Users/vero/Documents/Projet-ecommerce/Logo.png" alt="Logo Au Coin du Livre">
+            <button class="menu-togle">&#9776;</button>
         </section>
         <nav>
             <ul>
@@ -81,7 +82,117 @@
         </section>
 
         <!-- Meilleures Ventes section -->
-        
+
+        <section class="best-sellers">
+            <h2>Meilleures ventes</h2>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <img src="/Users/vero/Documents/Projet-ecommerce/couvertures-livres/avoir-le-courage-de-ne-pas-etreaime.webp" alt="Avoir le courage de ne pas être aimé">
+                    <h3>Avoir le courage de ne pas être aimé</h3>
+                    <p>Eiichiro Kishimi</p>
+                    <div class="rating">
+                        <span>⭐⭐⭐⭐⭐</span>
+                        <span>(253)</span>
+                    </div>
+                    <div class="price">
+                        <button class="new-price">Neuf: 12,34€</button>
+                        <button class="used-price">Occasion: 5,67€</button>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <img src="/Users/vero/Documents/Projet-ecommerce/couvertures-livres/katie.webp" alt="Katie">
+                    <h3>Katie</h3>
+                    <p>Michel McDowell</p>
+                    <div class="rating">
+                        <span>⭐⭐⭐⭐⭐</span>
+                        <span>(67)</span>
+                    </div>
+                    <div class="price">
+                        <button class="new-price">Neuf: 12,34€</button>
+                        <button class="used-price">Occasion: 5,67€</button>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <img src="/Users/vero/Documents/Projet-ecommerce/couvertures-livres/la-reine-des-enfers.jpeg" alt="La Reine des Enfers">
+                    <h3>La reine des enfers</h3>
+                    <p>Hazel Diaz</p>
+                    <div class="rating">
+                        <span>⭐⭐⭐⭐⭐</span>
+                        <span>(921)</span>
+                    </div>
+                    <div class="price">
+                        <button class="new-price">Neuf: 12,34€</button>
+                        <button class="used-price">Occasion: 5,67€</button>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <img src="/Users/vero/Documents/Projet-ecommerce/couvertures-livres/la-route.webp" alt="La Route">
+                    <h3>La route</h3>
+                    <p>Manu Larcenet</p>
+                    <div class="rating">
+                        <span>⭐⭐⭐⭐⭐</span>
+                        <span>(53)</span>
+                    </div>
+                    <div class="price">
+                        <button class="new-price">Neuf: 12,34€</button>
+                        <button class="used-price">Occasion: 5,67€</button>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <img src="/Users/vero/Documents/Projet-ecommerce/couvertures-livres/la-sage-femme-de-auschwitz.webp" alt="La sage-feme d'Auschwitz">
+                    <h3>La sage-feme d'Auschwitz</h3>
+                    <p>Anna Stuart</p>
+                    <div class="rating">
+                        <span>⭐⭐⭐⭐⭐</span>
+                        <span>(253)</span>
+                    </div>
+                    <div class="price">
+                        <button class="new-price">Neuf: 12,34€</button>
+                        <button class="used-price">Occasion: 5,67€</button>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <img src="/Users/vero/Documents/Projet-ecommerce/couvertures-livres/le-probleme-de-trois-corps.jpeg" alt="Le probléme à trois corps">
+                    <h3>Le probléme à trois corps</h3>
+                    <p>Liu Cixin</p>
+                    <div class="rating">
+                        <span>⭐⭐⭐⭐⭐</span>
+                        <span>(67)</span>
+                    </div>
+                    <div class="price">
+                        <button class="new-price">Neuf: 12,34€</button>
+                        <button class="used-price">Occasion: 5,67€</button>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <img src="/Users/vero/Documents/Projet-ecommerce/couvertures-livres/les-efaces.webp" alt="Les Effacées">
+                    <h3>Les effacées</h3>
+                    <p>Bernad Miniers</p>
+                    <div class="rating">
+                        <span>⭐⭐⭐⭐⭐</span>
+                        <span>(921)</span>
+                    </div>
+                    <div class="price">
+                        <button class="new-price">Neuf: 12,34€</button>
+                        <button class="used-price">Occasion: 5,67€</button>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <img src="/Users/vero/Documents/Projet-ecommerce/couvertures-livres/les-femmes-du-bout-du-monde.webp" alt="Les femmes du bout du monde">
+                    <h3>Les femmes du bout du monde</h3>
+                    <p>Melissa da Costa</p>
+                    <div class="rating">
+                        <span>⭐⭐⭐⭐⭐</span>
+                        <span>(53)</span>
+                    </div>
+                    <div class="price">
+                        <button class="new-price">Neuf: 12,34€</button>
+                        <button class="used-price">Occasion: 5,67€</button>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
 
     </main>
 
