home almost done: pending change comment to French

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </article>
         </section>
 
-        <!-- Recommendation section = SOLO PARA TABLETS PEQUEÑAS-->
+        <!-- Recommendation section = Small TABLETS -->
 
         <section class="container-featured-books"> 
             <div class="book-section-1">
@@ -259,79 +259,44 @@
         </section>
 
         <!-- Top Clients section -->
-        <section>
+        <section class="contenedor-grid">
             <h2 class="top-clients">Top 3 de nos clients</h2>
             <article class="client-item">
                 <img src="./images/couvertures-livres/quelqu-un-dautre.webp" alt="Quelqu'un d'autre">
-            <div class="client-details">
-                    <h3>Quelqu’un d’autre</h3>
-                    <p>Guillaume Musso</p>
-                    <div class="rating">⭐⭐⭐⭐⭐</div>
-                        <p>Qui a tué Oriana ? Un homme et trois femmes livrent leur version de l'histoire : Adrien, le mari de la victime, pianiste de jazz séduisant et mystérieux ; l'insaisissable Adèle, sa jeune maîtresse ; Justine, la policière locale chargée de l'enquête.</p>
-                    <button class="price-top">Neuf: 22,90€</button>         <!-- prueba -->
+                <div class="client-details">
+                    <div class="client-header">
+                        <h3>Quelqu’un d’autre</h3>
+                        <p>Guillaume Musso</p>
+                        <div class="rating">⭐⭐⭐⭐⭐</div>
+                    </div>
+                    <p class="description">Qui a tué Oriana ? Un homme et trois femmes livrent leur version de l'histoire : Adrien, le mari de la victime, pianiste de jazz séduisant et mystérieux ; l'insaisissable Adèle, sa jeune maîtresse ; Justine, la policière locale chargée de l'enquête.</p>
+                    <button class="price-top">Neuf: 22,90€</button>
                 </div>
             </article>
             <article class="client-item">
                 <img src="./images/couvertures-livres/one-piece.webp" alt="One Piece 107">
                 <div class="client-details">
+                    <div class="client-header">
                         <h3>One Piece 107</h3>
                         <p>Eiichiro Oda</p>
                         <div class="rating">⭐⭐⭐⭐⭐</div>
-                        <p>Coupable de trop en savoir sur l'histoire, Végapunk se retrouve menacé de mort par le CP-0. Mais alors qu'il tente de fuir l'île avec l'aide de l'équipage de Chapeau de paille, son entité principale disparaît subitement.</p>
-                        <button>Neuf: 6,99€</button>
+                    </div>
+                    <p class="description">Coupable de trop en savoir sur l'histoire, Végapunk se retrouve menacé de mort par le CP-0. Mais alors qu'il tente de fuir l'île avec l'aide de l'équipage de Chapeau de paille, son entité principale disparaît subitement.</p>
+                    <button class="price-top">Neuf: 6,99€</button>
                 </div>
             </article>
             <article class="client-item">
                 <img src="./images/couvertures-livres/shatter-me.jpeg" alt="Shatter Me">
                 <div class="client-details">
+                    <div class="client-header">
                         <h3>Shatter Me</h3>
                         <p>Taheren Mafi</p>
                         <div class="rating">⭐⭐⭐⭐⭐</div>
-                        <p>Une jeune fille adolescente fragile est retenue captive. Enfermée dans une cellule par Le Rétablissement - une dictature sévère qui dirige un monde en décomposition. Ce n'est pas une adolescente ordinaire. Juliette est une menace pour le pouvoir du Rétablissement...</p>
-                        <button>Neuf: 11,45€</button>
+                    </div>
+                    <p class="description">Une jeune fille adolescente fragile est retenue captive. Enfermée dans une cellule par Le Rétablissement - une dictature sévère qui dirige un monde en décomposition. Ce n'est pas une adolescente ordinaire. Juliette est une menace pour le pouvoir du Rétablissement...</p>
+                    <button class="price-top">Neuf: 11,45€</button>
                 </div>
             </article>
-            <section>
-                <h2 class="top-clients1">Top 3 de nos clients</h2>
-                <article class="client-item1">
-                    <img src="./images/couvertures-livres/quelqu-un-dautre.webp" alt="Quelqu'un d'autre">
-                    <div class="client-details1">
-                        <div class="client-header1">
-                            <h3>Quelqu’un d’autre</h3>
-                            <p>Guillaume Musso</p>
-                            <div class="rating1">⭐⭐⭐⭐⭐</div>
-                        </div>
-                        <p class="description1">Qui a tué Oriana ? Un homme et trois femmes livrent leur version de l'histoire : Adrien, le mari de la victime, pianiste de jazz séduisant et mystérieux ; l'insaisissable Adèle, sa jeune maîtresse ; Justine, la policière locale chargée de l'enquête.</p>
-                        <button class="price-top1">Neuf: 22,90€</button>
-                    </div>
-                </article>
-                <article class="client-item1">
-                    <img src="./images/couvertures-livres/one-piece.webp" alt="One Piece 107">
-                    <div class="client-details1">
-                        <div class="client-header1">
-                            <h3>One Piece 107</h3>
-                            <p>Eiichiro Oda</p>
-                            <div class="rating1">⭐⭐⭐⭐⭐</div>
-                        </div>
-                        <p class="description1">Coupable de trop en savoir sur l'histoire, Végapunk se retrouve menacé de mort par le CP-0. Mais alors qu'il tente de fuir l'île avec l'aide de l'équipage de Chapeau de paille, son entité principale disparaît subitement.</p>
-                        <button>Neuf: 6,99€</button>
-                    </div>
-                </article>
-                <article class="client-item1">
-                    <img src="./images/couvertures-livres/shatter-me.jpeg" alt="Shatter Me">
-                    <div class="client-details1">
-                        <div class="client-header1">
-                            <h3>Shatter Me</h3>
-                            <p>Taheren Mafi</p>
-                            <div class="rating1">⭐⭐⭐⭐⭐</div>
-                        </div>
-                        <p class="description1">Une jeune fille adolescente fragile est retenue captive. Enfermée dans une cellule par Le Rétablissement - une dictature sévère qui dirige un monde en décomposition. Ce n'est pas une adolescente ordinaire. Juliette est une menace pour le pouvoir du Rétablissement...</p>
-                        <button>Neuf: 11,45€</button>
-                    </div>
-                </article>
-            </section>
-
-
         </section>
 
         <!-- Nouveautés + Anglais section -->
