Integration done - html/css validator ok

--- a/panier.html
+++ b/panier.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-
 </head>
 
 <body>
@@ -24,9 +23,9 @@
         </section>
         <nav>
             <ul>
-                <li><a href="#Accueil">ACCUEIL</a></li>
-                <li><a href="#Mon Compte">MON COMPTE</a></li>
-                <li><a href="#Panier">PANIER</a></li>
+                <li><a href="index.html">ACCUEIL</a></li>
+                <li><a href="#Mon-Compte">MON COMPTE</a></li>
+                <li><a href="panier.html">PANIER</a></li>
                 <li><a href="#Wishlist" class="button">Wishlist <span class="heart">❤️</span></a></li>
             </ul>
             <button class="menu-togle">&#9776;</button>
@@ -143,36 +142,36 @@
     <footer>
         <section class="footer-section">
             <ul>
-                <li><a href="#Qui sommes-nous">Qui sommes-nous</a></li>
-                <li><a href="#Vendez avec nous">Vendez avec nous</a></li>
+                <li><a href="#Quisommes-nous">Qui sommes-nous</a></li>
+                <li><a href="#Vendez-avec-nous">Vendez avec nous</a></li>
                 <li><a href="#Prévente">Prévente</a></li>
-                <li><a href="#Infos éditoriales">Infos éditoriales</a></li>
+                <li><a href="#Infos-éditoriales">Infos éditoriales</a></li>
             </ul>
         </section>
         <section class="footer-section">
             <ul>
-                <li><a href="#Paiements par carte">Paiements par carte</a></li>
+                <li><a href="#Paiements-par-carte">Paiements par carte</a></li>
                 <li><a href="#Retous">Retours</a></li>
-                <li><a href="#Frais de livraison">Frais de livraison</a></li>
-                <li><a href="#Question fréquentes">Questions fréquentes</a></li>
+                <li><a href="#Frais-de-livraison">Frais de livraison</a></li>
+                <li><a href="#Question-fréquentes">Questions fréquentes</a></li>
             </ul>
         </section>
         <section class="footer-section">
             <ul>
-                <li><a href="#Information légales">Information légales</a></li>
-                <li><a href="#Politique de confidentialité">Politique de confidentialité</a></li>
-                <li><a href="#Politique des cookies">Politique des cookies</a></li>
+                <li><a href="#Information-légales">Information légales</a></li>
+                <li><a href="#Politique-confidentialité">Politique de confidentialité</a></li>
+                <li><a href="#Politique-cookies">Politique des cookies</a></li>
                 <li><a href="#Accessibilité">Accessibilité</a></li>
             </ul>
         </section>
         <section class="footer-section contact-us">
-            <h3>Contactez-nous</h2>
-                <div class="social-icons">
-                    <a href="#"></a><img src="./images/icons-socials/instagram.png" alt="Instagram">
-                    <a href="#"></a><img src="./images/icons-socials/youtube.png" alt="Youtube">
-                    <a href="#"></a><img src="./images/icons-socials/facebook.png" alt="Facebook">
-                    <a href="#"></a><img src="./images/icons-socials/linkedin.png" alt="Linkedin">
-                </div>
+            <h3>Contactez-nous</h3>
+            <div class="social-icons">
+                <a href="#"></a><img src="./images/icons-socials/instagram.png" alt="Instagram">
+                <a href="#"></a><img src="./images/icons-socials/youtube.png" alt="Youtube">
+                <a href="#"></a><img src="./images/icons-socials/facebook.png" alt="Facebook">
+                <a href="#"></a><img src="./images/icons-socials/linkedin.png" alt="Linkedin">
+            </div>
         </section>
     </footer>
 
@@ -187,5 +186,14 @@
             <li><a href="#Belgique">Belgique</a></li>
         </ul>
     </section>
+
+    <!-- CSS Validator -->
+    <p>
+        <a href="http://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+                alt="¡CSS Válido!" />
+        </a>
+    </p>
 </body>
+
 </html>
