--- a/panier.html
+++ b/panier.html
@@ -18,9 +18,9 @@
 <body>
     <header>
         <!-- Nav menu -->
-        <section class="logo-container">
+        <div class="logo-container">
             <img class="logo" src="./images/Logo.png" alt="Logo Au Coin du Livre">
-        </section>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">ACCUEIL</a></li>
@@ -32,9 +32,9 @@
         </nav>
     </header>
     <main>
-        <section class="container">
+        <div class="container">
             <aside class="left-section">
-                <div class="section" id="login">
+                <section class="section" id="login">
                     <h2><span class="number">1</span> Se connecter</h2>
                     <form class="login-form">
                         <input type="email" placeholder="Votre email">
@@ -51,9 +51,9 @@
                             <button class="signup-button">M’inscrire</button>
                         </form>
                     </div>
-                </div>
+                </section>
 
-                <div class="signup-section">
+                <section class="signup-section">
                     <h2><span class="number">2</span>Où souhaitez-vous le recevoir ?</h2>
                     <form class="signup-form">
                         <input type="text" placeholder="Nom">
@@ -62,11 +62,11 @@
                         <input type="text" placeholder="Telephone">
                         <button class="signup-button">Enregistrer l'adresse</button>
                     </form>
-                </div>
+                </section>
 
-                <div class="payment-section">
+                <section class="payment-section">
                     <h2><span class="number">3</span> Comment souhaitez-vous payer ?</h2>
-                    <h4>Carte bancaire</h4>
+                    <h3>Carte bancaire</h3>
                     <form class="payment-form">
                         <input type="text" placeholder="Numéro de carte">
                         <input type="text" placeholder="Titulaire de la carte">
@@ -77,7 +77,7 @@
                         </div>
                         <button class="payment-button">Payer</button>
                     </form>
-                </div>
+                </section>
             </aside>
             <!-- Right Section "PANIER"-->
             <section class="right-section">
@@ -86,7 +86,7 @@
                     <img src="./images/couvertures-livres/avoir-le-courage-de-ne-pas-etreaime.webp"
                         alt="Avoir le courage de ne pas être aimé">
                     <div class="item-details">
-                        <p class="title">Avoir le courage de ne pas être aimé</p>
+                        <h3 class="title">Avoir le courage de ne pas être aimé</h3>
                         <p class="author">Eichiro Kishimi</p>
                         <p class="condition">Livre Neuf</p>
                         <div class="price-quantity">
@@ -100,7 +100,7 @@
                 <article class="cart-item">
                     <img src="./images/couvertures-livres/one-piece.webp" alt="One Piece Vol. 107">
                     <div class="item-details">
-                        <p class="title">One Piece Vol. 107</p>
+                        <h3 class="title">One Piece Vol. 107</h3>
                         <p class="author">Eichiro Oda</p>
                         <p class="condition">Livre neuf</p>
                         <div class="price-quantity">
@@ -122,11 +122,11 @@
                     <button>VALIDER VOTRE PANIER</button>
                 </div>
             </section>
-        </section>
+        </div>
 
         <section class="promo-section">
-            <p>Merci pour votre achat ! <br>
-                Cliquez ici pour obtenir une réduction exclusive de 10% sur votre prochaine commande.</p>
+            <h2>Merci pour votre achat !</h2>
+            <p>Cliquez ici pour obtenir une réduction exclusive de 10% sur votre prochaine commande.</p>
         </section>
 
         <section class="faq-section">
@@ -135,42 +135,42 @@
                 laissez-nous un message sur ce formulaire.<br>Consulter nos faq.</p>
         </section>
 
-        <section class="yellow-line"></section>
+        <div class="yellow-line"></div>
 
     </main>
     <!-- Footer section -->
     <footer>
-        <section class="footer-section">
+        <div class="footer-section">
             <ul>
                 <li><a href="#Quisommes-nous">Qui sommes-nous</a></li>
                 <li><a href="#Vendez-avec-nous">Vendez avec nous</a></li>
                 <li><a href="#Prévente">Prévente</a></li>
                 <li><a href="#Infos-éditoriales">Infos éditoriales</a></li>
             </ul>
-        </section>
-        <section class="footer-section">
+        </div>
+        <div class="footer-section">
             <ul>
                 <li><a href="#Paiements-par-carte">Paiements par carte</a></li>
                 <li><a href="#Retous">Retours</a></li>
                 <li><a href="#Frais-de-livraison">Frais de livraison</a></li>
                 <li><a href="#Question-fréquentes">Questions fréquentes</a></li>
             </ul>
-        </section>
-        <section class="footer-section">
+        </div>
+        <div class="footer-section">
             <ul>
                 <li><a href="#Information-légales">Information légales</a></li>
                 <li><a href="#Politique-confidentialité">Politique de confidentialité</a></li>
                 <li><a href="#Politique-cookies">Politique des cookies</a></li>
                 <li><a href="#Accessibilité">Accessibilité</a></li>
             </ul>
-        </section>
+        </div>
         <section class="footer-section contact-us">
             <h3>Contactez-nous</h3>
             <div class="social-icons">
-                <a href="#"></a><img src="./images/icons-socials/instagram.png" alt="Instagram">
-                <a href="#"></a><img src="./images/icons-socials/youtube.png" alt="Youtube">
-                <a href="#"></a><img src="./images/icons-socials/facebook.png" alt="Facebook">
-                <a href="#"></a><img src="./images/icons-socials/linkedin.png" alt="Linkedin">
+                <a href="https://www.instagram.com/" target="_blank"><img src="./images/icons-socials/instagram.png" alt="Instagram"></a>
+                <a href="https://youtube.com" target="_blank"><img src="./images/icons-socials/youtube.png" alt="Youtube"></a>
+                <a href="https://facebook.com" target="_blank"><img src="./images/icons-socials/facebook.png" alt="Facebook"></a>
+                <a href="https://linkedin.com" target="_blank"><img src="./images/icons-socials/linkedin.png" alt="Linkedin"></a>
             </div>
         </section>
     </footer>
